Refine LanguageTool build guide